# Marzban-node

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  marzban.service
.github/workflows/: build.yml
src/: config.rs  core.rs  lib.rs  main.rs  server.rs  xray_config.rs
