[package]
name = "marzban-node"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
httparse = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
